# MoltbookMonitor

./: CMakeLists.txt  Main.qml  README.md  main.cpp  monitorcontroller.cpp  monitorcontroller.h
.github/workflows/: release.yml
cmake/: AppVersion.h.in
qml/: Main.qml
qml/components/: AgentCard.qml  AgentListPanel.qml  MonitorControlPanel.qml  NotificationBanner.qml  NotificationsPanel.qml  RequestLogPanel.qml  StatusMessagePanel.qml
qml/js/: UiHelpers.js
src/app/: main.cpp
src/monitor/: monitorcontroller.h  monitorcontroller_agents.cpp  monitorcontroller_importexport.cpp  monitorcontroller_model.cpp  monitorcontroller_profile.cpp  monitorcontroller_state.cpp  monitorcontroller_updates.cpp
